--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Personal Website</h1>
-    <p>This is hosted on GitHub Pages!</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h1>Hi, I'm [Your Name]</h1>
+            <p>Welcome to my personal website! I'm a [Your Profession] who loves [Your Interests].</p>
+        </div>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+                I'm passionate about creating solutions that make life easier. In my free time, I enjoy [Your Hobbies].
+            </p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <div class="projects-container">
+                <div class="project">
+                    <h3>Project 1</h3>
+                    <p>A short description of this project.</p>
+                </div>
+                <div class="project">
+                    <h3>Project 2</h3>
+                    <p>A short description of this project.</p>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Feel free to reach out to me at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        </section>
+    </main>
+    <footer>
+        <p>© 2024 [Your Name]. All rights reserved.</p>
+    </footer>
 </body>
 </html>
