--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yue's Secret Base</title>
+    <title data-key="title">Yue's Secret Base</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +17,7 @@
             <div class="language-selector">
                 <button id="lang-en">English</button>
                 <button id="lang-fr">Français</button>
+                <button id="lang-sc">蜀語</button>
             </div>
         </nav>
         <div class="hero">
