--- a/index.html
+++ b/index.html
@@ -3,111 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-key="title">Yue's Secret Base</title>
+    <title data-key="page-title">Yue's Secret Base</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#about" data-key="about-link">About</a></li>
-                <li><a href="#projects" data-key="projects-link">Projects</a></li>
-                <li><a href="#contact" data-key="contact-link">Contact</a></li>
-            </ul>
-            <div class="language-selector">
-                <button id="lang-en">English</button>
-                <button id="lang-fr">Français</button>
-                <button id="lang-sc">蜀語</button>
-            </div>
-        </nav>
-        <div class="hero">
-            <h1 data-key="hero-title">Hi, I'm Yue.</h1>
-            <p data-key="hero-description">Welcome to my personal website! I'm a I'm a CS PhD candiate @ uOttawa who loves theories.</p>
+        <div class="language-selector">
+            <button id="lang-en">English</button>
+            <button id="lang-fr">Français</button>
+            <button id="lang-sc">巴蜀話</button>
         </div>
     </header>
     <main>
+        <!-- New Profile Section -->
+        <section class="profile-section">
+            <img src="images/Profile.jpg" alt="Profile Photo" class="profile-photo" />
+            <div class="profile-links">
+                <h2 data-key="hero-title">Hi, I'm Yue.</h2>
+                <p data-key="hero-description">Welcome to my personal website!</p>
+                <a href="https://github.com/sdawzy" target="_blank" class="profile-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/yuezhang1437/" target="_blank" class="profile-link">LinkedIn</a>
+                <a href="mailto:yzha1030@uottawa.ca" class="profile-link">Email</a>
+            </div>
+        </section>
+
+        <!-- Existing About, Projects, and Contact Sections -->
         <section id="about">
             <h2 data-key="about-title">About Me</h2>
-            <p data-key="about-description">
-                I'm passionate about creating solutions that make life easier. In my free time, I enjoy board games.
-            </p>
+            <p data-key="about-description">I'm passionate about creating solutions...</p>
         </section>
         <section id="projects">
             <h2 data-key="projects-title">Projects</h2>
-            <div class="projects-container">
-                <div class="project">
-                    <h3 data-key="project1-title">Project 1</h3>
-                    <p data-key="project1-description">A short description of this project.</p>
-                </div>
-                <div class="project">
-                    <h3 data-key="project2-title">Project 2</h3>
-                    <p data-key="project2-description">A short description of this project.</p>
-                </div>
-            </div>
+            <!-- Project content -->
         </section>
         <section id="contact">
             <h2 data-key="contact-title">Contact</h2>
-            <p data-key="contact-description">
-                Feel free to reach out to me at <a href="mailto:yzha1030@uottawa.ca">yzha1030@uottawa.ca</a>
-            </p>
+            <p data-key="contact-description">Feel free to reach out...</p>
         </section>
     </main>
     <footer>
         <p data-key="footer">© 2024 Yue Zhang. All rights reserved.</p>
     </footer>
-    <script src="i18n.js"></script>
 </body>
-</html>
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yue's Secret Base</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div class="hero">
-            <h1>Hi, I'm Yue.</h1>
-            <p>Welcome to my personal website! I'm a CS PhD candiate @ uOttawa.</p>
-        </div>
-    </header>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                I'm passionate about creating solutions that make life easier. In my free time, I enjoy board games.
-            </p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <div class="projects-container">
-                <div class="project">
-                    <h3>Project 1</h3>
-                    <p>A short description of this project.</p>
-                </div>
-                <div class="project">
-                    <h3>Project 2</h3>
-                    <p>A short description of this project.</p>
-                </div>
-            </div>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Feel free to reach out to me at <a href="mailto:yzha1030@uottawa.ca">yzha1030@uottawa.ca</a></p>
-        </section>
-    </main>
-    <footer>
-        <p>© 2024 Yue Zhang. All rights reserved.</p>
-    </footer>
-</body>
-</html> -->
