fixed CSS layout

--- a/index.html
+++ b/index.html
@@ -44,4 +44,6 @@
     <footer>
         <p data-key="footer">© 2024 Yue Zhang. All rights reserved.</p>
     </footer>
+    <script src="i18n.js"></script>
 </body>
+</html>
