added more pages

--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-key="page-title">Yue's Secret Base</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="language-selector">
-            <button id="lang-en">English</button>
-            <button id="lang-fr">Français</button>
-            <button id="lang-sc">巴蜀話</button>
-        </div>
-    </header>
+    <header id="header-placeholder"></header>
     <main>
         <!-- New Profile Section -->
         <section class="profile-section">
@@ -44,6 +38,7 @@
     <footer>
         <p data-key="footer">© 2024 Yue Zhang. All rights reserved.</p>
     </footer>
-    <script src="i18n.js"></script>
+    <script src="js/i18n.js"></script>
+    <script src="js/header.js" defer></script>
 </body>
 </html>
