implemented consistent header

--- a/blog.html
+++ b/blog.html
@@ -7,20 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="blog.html">Blog</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+    <header id="header-placeholder"></header>
+    <script src="js/header.js" defer></script>
     <main>
         <h1>Blog</h1>
         <ul>
-            <li><a href="blog/blog1.html">Blog Post 1</a></li>
-            <li><a href="blog/blog2.html">Blog Post 2</a></li>
-            <li><a href="blog/blog3.html">Blog Post 3</a></li>
+            <li><a href="blogs/blog1.html">Blog Post 1</a></li>
+            <li><a href="blogs/blog2.html">Blog Post 2</a></li>
+            <li><a href="blogs/blog3.html">Blog Post 3</a></li>
         </ul>
     </main>
     <footer>
