--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -8,19 +8,8 @@
     <script src="../js/i18n.js" defer></script>
 </head>
 <body>
-    <header>
-        <div class="language-selector">
-            <button id="lang-en">English</button>
-            <button id="lang-fr">Français</button>
-            <button id="lang-sc">四川話</button>
-        </div>
-        <nav>
-            <a href="../index.html" data-key="nav-home">Home</a>
-            <a href="../about.html" data-key="nav-about">About</a>
-            <a href="../blog.html" data-key="nav-blog">Blog</a>
-            <a href="../contact.html" data-key="nav-contact">Contact</a>
-        </nav>
-    </header>
+    <header id="header-placeholder"></header>
+    <script src="js/header.js" defer></script>
     <main>
         <h1 data-key="blog1-title">Blog Post 1</h1>
         <p>This is the content of Blog Post 1. Write something engaging here!</p>
