--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <header id="header-placeholder"></header>
-    <script src="js/header.js" defer></script>
     <main>
         <h1 data-key="blog1-title">Blog Post 1</h1>
         <p>This is the content of Blog Post 1. Write something engaging here!</p>
@@ -17,5 +16,6 @@
     <footer>
         <p data-key="footer">© 2024 [Your Name]. All rights reserved.</p>
     </footer>
+    <script src="js/i18n.js" defer></script>
 </body>
 </html>
