--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <header id="header-placeholder"></header>
-    <script src="js/header.js" defer></script>
     <main>
         <!-- New Profile Section -->
         <section class="profile-section">
@@ -39,7 +38,6 @@
     <footer>
         <p data-key="footer">© 2024 Yue Zhang. All rights reserved.</p>
     </footer>
-    <script src="js/i18n.js"></script>
-    
+    <script src="js/i18n.js" defer></script>
 </body>
 </html>
