renamed blog directory

--- a/blog.html
+++ b/blog.html
@@ -11,14 +11,14 @@
     <main>
         <h1>Blog</h1>
         <ul>
-            <li><a href="blogs/blog1.html">Blog Post 1</a></li>
-            <li><a href="blogs/blog2.html">Blog Post 2</a></li>
-            <li><a href="blogs/blog3.html">Blog Post 3</a></li>
+            <li><a href="blog/blog1.html">Blog Post 1</a></li>
+            <li><a href="blog/blog2.html">Blog Post 2</a></li>
+            <li><a href="blog/blog3.html">Blog Post 3</a></li>
         </ul>
     </main>
     <footer>
         <p>&copy; 2024 Yue Zhang. All rights reserved.</p>
     </footer>
-    <script src="js/header.js" defer></script>
+    <script src="js/i18n.js" defer></script>
 </body>
 </html>
