--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@
     <button id="lang-sc">四川話</button>
 </div>
 <nav>
-    <a href="index.html" data-key="nav-home">Home</a>
-    <a href="about.html" data-key="nav-about">About</a>
-    <a href="blog.html" data-key="nav-blog">Blog</a>
-    <a href="contact.html" data-key="nav-contact">Contact</a>
+    <a href="/index.html" data-key="nav-home">Home</a>
+    <a href="/about.html" data-key="nav-about">About</a>
+    <a href="/blog.html" data-key="nav-blog">Blog</a>
+    <a href="/contact.html" data-key="nav-contact">Contact</a>
 </nav>
