--- a/header.html
+++ b/header.html
@@ -7,5 +7,6 @@
     <a href="/index.html" data-key="nav-home">Home</a>
     <a href="/about.html" data-key="nav-about">About</a>
     <a href="/blog.html" data-key="nav-blog">Blog</a>
-    <a href="/contact.html" data-key="nav-contact">Contact</a>
+    <a href="/fun.html" data-key="nav-fun">Fun</a>
+    <a href="/contact.html" data-key="nav-contact">Contact</a> 
 </nav>
