updated contact info

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,15 @@
 <body>
     <header id="header-placeholder"></header>
     <main>
-        <h1>Blog</h1>
+        <h1>Emails</h1>
         <ul>
-            <li><a href="blog/blog1.html">Blog Post 1</a></li>
-            <li><a href="blog/blog2.html">Blog Post 2</a></li>
-            <li><a href="blog/blog3.html">Blog Post 3</a></li>
+            <li>School Email: <a>yzha1030@uottawa.ca</a></li>
+            <li>Work Email:   <a>yuezhang1437@gmail.com</a></li>
+        </ul>
+        <h1>Social Media</h1>
+        <ul>
+            <li><a href="https://github.com/sdawzy" target="_blank">My GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/yuezhang1437/" target="_blank">LinkedIn</a></li>
         </ul>
     </main>
     <footer>
