--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             <div class="profile-links">
                 <h2 data-key="hero-title">Hi, I'm Yue.</h2>
                 <p data-key="hero-description">Welcome to my personal website!</p>
-                <a href="https://github.com/sdawzy" target="_blank" class="profile-link">GitHub</a>
-                <a href="https://www.linkedin.com/in/yuezhang1437/" target="_blank" class="profile-link">LinkedIn</a>
-                <a href="mailto:yzha1030@uottawa.ca" class="profile-link">Email</a>
+                <div class="social-links">                
+                    <a href="https://github.com/sdawzy" target="_blank" class="profile-link">GitHub</a>
+                    <a href="https://www.linkedin.com/in/yuezhang1437/" target="_blank" class="profile-link">LinkedIn</a>
+                    <a href="mailto:yuezhang1437@gmail.com" class="profile-link">Email</a>
+                </div>
             </div>
         </section>
 
