fixed contact info

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         </section>
         <section id="contact">
             <h2 data-key="contact-title">Contact</h2>
-            <p data-key="contact-description">Feel free to reach out...</p>
+            <p>
+                <a data-key="contact-description"> Feel free to reach out...</a>
+                <a href='mailto:yuezhang1437@gmail.com'>yuezhang1437@gmail.com</a>
+            </p>
         </section>
     </main>
     <footer>
