--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
     <main>
         <h1>Blog</h1>
         <ul>
-            <li><a href="blogs/blog1.html">Blog Post 1</a></li>
-            <li><a href="blogs/blog2.html">Blog Post 2</a></li>
-            <li><a href="blogs/blog3.html">Blog Post 3</a></li>
+            <li><a href="blog/blog1.html">Blog Post 1</a></li>
+            <li><a href="blog/blog2.html">Blog Post 2</a></li>
+            <li><a href="blog/blog3.html">Blog Post 3</a></li>
         </ul>
     </main>
     <footer>
