added project description

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <section id="projects">
             <h2 data-key="projects-title">Projects</h2>
             <!-- Project content -->
+            <p data-key="project-description"><p>
         </section>
         <section id="contact">
             <h2 data-key="contact-title">Contact</h2>
