ready to add french pages

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,10 +1,12 @@
 ---
 layout: archive
 title: "Selected Projects"
-permalink: /projects/
+permalink: /en/projects/
 author_profile: true
 redirect_from: 
   - /portfolio/
+  - /projects/
+  - /en/portfolio/
 ---
 
 {% include base_path %}
