--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,8 +1,10 @@
 ---
 layout: archive
 title: "Publications"
-permalink: /publications/
+permalink: /en/publications/
 author_profile: true
+redirect_from: 
+  - /publications/
 ---
 
 {% if site.author.googlescholar %}
