--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,11 +1,12 @@
 ---
 layout: archive
-permalink: /blog/
+permalink: /en/blog/
 title: "Blog posts"
 author_profile: true
 redirect_from:
   - /wordpress/blog/
   - /blog-posts/
+  - /blog/
 ---
 
 {% include base_path %}
