--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,8 +1,10 @@
 ---
 layout: archive
-permalink: /categories/
+permalink: /en/categories/
 title: "Posts by Category"
 author_profile: true
+redirect_from: 
+  - /categories/
 ---
 
 {% include base_path %}
