--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "Posts by Collection"
-permalink: /collection-archive/
+permalink: /en/collection-archive/
 author_profile: true
 ---
 
