--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,8 +1,10 @@
 ---
 layout: archive
 title: "Teaching"
-permalink: /teaching/
+permalink: /en/teaching/
 author_profile: true
+redirect_from: 
+  - /teaching/
 ---
 
 {% include base_path %}
