added language switcher

--- a/_pages/portfolio-fr.html
+++ b/_pages/portfolio-fr.html
@@ -1,12 +1,11 @@
 ---
-layout: archive
-title: "Selected Projects"
-permalink: /en/projects/
+layout: archive-fr
+title: "Projets Sélectionnés"
+permalink: /fr/projets/
 author_profile: true
 redirect_from: 
-  - /portfolio/
-  - /projects/
-  - /en/portfolio/
+  - /fr/portfolio/
+  - /fr/projects/
 ---
 
 {% include base_path %}
