--- a/_pages/teaching-fr.html
+++ b/_pages/teaching-fr.html
@@ -1,10 +1,10 @@
 ---
-layout: archive
-title: "Teaching"
-permalink: /en/teaching/
+layout: archive-fr
+title: "Expériences d’Enseignement"
+permalink: /fr/enseignement/
 author_profile: true
 redirect_from: 
-  - /teaching/
+  - /fr/teaching/
 ---
 
 {% include base_path %}
