--- a/_pages/year-archive-fr.html
+++ b/_pages/year-archive-fr.html
@@ -1,12 +1,10 @@
 ---
-layout: archive
-permalink: /en/blog/
-title: "Blog posts"
+layout: archive-fr
+permalink: /fr/blog/
+title: "Articles de Blog"
 author_profile: true
 redirect_from:
-  - /wordpress/blog/
-  - /blog-posts/
-  - /blog/
+  - /fr/blog-posts/
 ---
 
 {% include base_path %}
